tests/reference/asr-kind_invalid_int_of_int-32727cf.stderr
semantic error: Kind 3 is not supported for Integer
 --> tests/errors/kind_invalid_int_of_int.f90:3:13
  |
3 |     integer(3) :: x
  |             ^ 
